2010-04-13  Sebastien Pouliot  <sebastien@ximian.com>

	* DependencyObject.g.cs: Regenerated
	* NotificationWindow.cs: Add Initialize method and throw an
	InvalidOperationException if the application is not running
	out of the browser

2010-04-09  Jeffrey Stedfast  <fejj@novell.com>

	* CheckAndDownloadUpdateCompletedEventArgs.cs: Implemented.

	* Application.cs (CheckAndDownloadUpdateAsync): Implemented. Also
	fixed to propagate InstallStateChanged and
	CheckANdDownloadUpdateCompleted events.

2010-04-09  Alan McGovern  <amcgovern@novell.com>

	* DependencyObject.cs: If ClearValue is called with a ReadOnly
	  dp, throw an ArgumentException.

2010-04-08  Alan McGovern  <amcgovern@novell.com>

	* DependencyProperty.cs: Verify that the supplied default
	  value is the correct type before using it.

2010-04-07  Jeffrey Stedfast  <fejj@novell.com>

	* Application.cs (IsOutOfBrowser): Updated to use the native
	accessor for this property instead of using the global runtime
	function which has been removed.

2010-04-06  Alan McGovern  <amcgovern@novell.com>

	* FrameworkElement.cs: For two way bindings, only update the
	  binding after base.SetValueImpl has been executed so that we
	  get the correct value if we call GetValue () on the FE
	  inside UpdateSourceObject.

2010-04-03  Sebastien Pouliot  <sebastien@ximian.com> 

	* StartupEventArgs.cs: Fix duplicate entry (replace) and allow
	entries with empty values. Fix DRT#199

2010-04-03  Sebastien Pouliot  <sebastien@ximian.com>

	* Deployment.cs: Rework error handling, reduce code duplication
	and release resources (MemoryStream and WebResponse). Fix 
	remaining issues in DRT#355

2010-04-02  Sebastien Pouliot  <sebastien@ximian.com> 

	* Deployment.cs: Accept anything newer than 2.0.30524 (but not
	30524 itself). Fix another failure in DRT#355

2010-04-02  Sebastien Pouliot  <sebastien@ximian.com>

	* Deployment.cs: Fix NRE if EmitError is called before the
	application is created. Fix two failures in DRT#355
