@@ -68,8 +68,9 @@ public:
 	
 	bool IsInstallable ();
 	
+	// The test harness calls the InstallWithError p/invoke through reflection, so if you update the signature here, be sure to update the harness too.
 	/* @GenerateCBinding,GeneratePInvoke */
-	bool InstallWithError (MoonError *error);
+	bool InstallWithError (MoonError *error, bool unattended);
 	void Uninstall ();
 	bool Install ();
 	
