@@ -269,7 +269,7 @@ public:
 	virtual bool IsRunningOutOfBrowser (Deployment *deployment) = 0;
 	virtual bool CheckInstalled (Deployment *deployment) = 0;
 	virtual void Uninstall (Deployment *deployment) = 0;
-	virtual bool Install (Deployment *deployment) = 0;
+	virtual bool Install (Deployment *deployment, bool unattended) = 0;
 	
 	void UpdaterNotifySize (gint64 size);
 	void UpdaterWrite (void *buf, gint32 offset, gint32 n);
