@@ -1,3 +1,7 @@
+2010-04-14  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
+	* Application.cs: Update call to application_install according to API change.
+
 2010-04-13  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* DependencyObject.g.cs: Regenerated
